# juno_wf_avg

./: .gitignore  CMakeLists.txt  Makefile  README.md  WfAverage.cxx  draw_wf_avg.cxx  gen_run_list.sh  run.py
